# SelfbotSource

./: README.md  pyproject.toml  setup.py
src/ChatSelfbot/: __init__.py  _selfbot.py
