[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "ChatSelfbot"
version = "0.0.1"
authors = [
  { name="Bjarnos", email="contact@bjarnos.dev" },
]
description = "A fast and light selfbot for Chat by Jona Zwetsloot!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Bjarnos/SelfbotSource"
Issues = "https://github.com/Bjarnos/SelfbotSource/issues"
